--- a/classic-cocktails.html
+++ b/classic-cocktails.html
@@ -61,17 +61,19 @@
 
   <section id="content-area">
 
-      <h2>Classic cocktails</h2>
+      <p class="page-title">Classic cocktails</p>
 
-      <h3>What is a cocktail?</h3>
+      <h2>What is a cocktail?</h2>
       <p>The official definition of a "cocktail" according to the modern Merriam-Webster Dictionary is "an iced drink of wine or distilled liquor mixed with flavoring ingredients." That's a pretty broad definition, but reflects the modern practice of referring to almost any mixed drink as a cocktail.</p>
       <p>The first published definition of the Cocktail appeared in an editorial response in The Balance and Columbian Repository of 1806.</p>
       <p>This read: "Cocktail is a stimulating liquor, composed of spirits of any kind, sugar, water and bitters." It is this definition of ingredients that we continue to use when referring to the 'ideal' cocktail.</p>
-      <h3>When was the Cocktail Created?</h3>
+
+    <h2>When was the Cocktail Created?</h2>
       <p>People have been mixing drinks for centuries, but it wasn't until the 17th and 18th centuries that the precursors of the cocktail (the Slings, Fizzes, Toddies and Juleps) became popular enough to be recorded in the history books.</p>
       <p>It is unclear where, who, and what went into the creation of the original cocktail, but it seems to be a specific drink rather than a category of mixed drinks during that time.</p>
       <p>The first published reference to the cocktail appears in the Farmer's Cabinet (Amherst, New Hampshire, April 28, 1803). The spoof editorial tells of a "lounger" who, with an 11 a.m. hangover, "…Drank a glass of cocktail - excellent for the head…" In Imbibe!, David Wondrich attributes the first known cocktail recipe in print to Captain J.E. Alexander in 1831 who calls for brandy, gin or rum in a mix of "…a third of the spirit to two-thirds of the water; add bitters, and enrich with sugar and nutmeg…"</p>
-      <h3>Where did the Name <span>Cocktail</span> Originate?</h3>
+
+      <h2>Where did the Name <span>Cocktail</span> Originate?</h2>
       <p>There are as many stories behind the origin of the name cocktail as there are behind the creation of the first Margarita or the Martini. As always, some are preposterous, some believable and who knows, one may be the truth. None the less, the stories are interesting:</p>
       <p id="cocktail-origin-toggle">Read full stories</p>
       <div id="cocktail-origin-stories">
@@ -91,7 +93,7 @@
         </ul>
       </div>
 
-    <h3>Classic cocktails</h3>
+    <h2>Classic cocktails</h2>
     <p>You can’t go wrong with a classic cocktail. Whether you’re craving a tried-and-true Old Fashioned, a traditional whiskey-and-vermouth Manhattan or James Bond’s famous Vesper, the classic cocktail recipes below are anywhere from centuries to decades old and were invented all over the world.</p>
     <p>You may find different units are used to measure cocktail ingredients. Below is a rough comparison:</p>
     <p><strong>1 US fluid ounce (oz) ≈ 30 Milliliters (ml) ≈ 3 Centiliters (cl) ≈ 1 part</strong>*</p>
