--- a/specialty-cocktails.html
+++ b/specialty-cocktails.html
@@ -5,23 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
   <meta name="keywords" content="bar, bar guide, bar setup, mixology, liquor, liqueur, garnish, cocktail, cocktails, spirit, alcohol">
   <meta name="description" content="This is an unofficial bar guide that may serve as a go-to resource for bartenders and everyone interested in knowing more about spirits and bar business.">
-  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="60x60" href="apple-touch-icon-60x60.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="apple-touch-icon-120x120.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="76x76" href="apple-touch-icon-76x76.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="apple-touch-icon-152x152.png" />
+  <link rel="icon" type="image/png" href="favicon-196x196.png" sizes="196x196" />
+  <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="favicon-128.png" sizes="128x128" />
+  <meta name="application-name" content="&nbsp;"/>
+  <meta name="msapplication-TileColor" content="#FFFFFF" />
+  <meta name="msapplication-TileImage" content="mstile-144x144.png" />
+  <meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
+  <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
+  <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
+  <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
   <title>B-Bar Bar Guide</title>
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
@@ -59,7 +62,7 @@
   <section id="right-panel">
     <section id="content-area">
 
-      <h2>Specialty cocktails</h2>
+      <p class="page-title">Specialty cocktails</p>
 
       <div class="info-cards-area">
         <article class="info-card">
@@ -97,7 +100,7 @@
                   <th colspan="2">Preparation</th>
                 </tr>
                 <tr>
-                  <td colspan="2">Build in large Rocks glass, add ice, shake vigorously.Garnish with orange slice.</td>
+                  <td colspan="2">Build in large Rocks glass, add ice, shake vigorously. Garnish with orange slice.</td>
                 </tr>
               </table>
 
@@ -125,7 +128,7 @@
                   <td>Lime juice</td>
                 </tr>
                 <tr>
-                  <td>1sprig</td>
+                  <td>1 sprig</td>
                   <td>Mint</td>
                 </tr>
                 <tr>
@@ -381,9 +384,9 @@
 
         <article class="info-card">
           <div class="info-card-content">
-            <img src="img/specialty-cardinal-sin.jpg" alt="Bbar Mojito" class="recipe-btn-9">
+            <img src="img/specialty-cardinal-sin.jpg" alt="Flintlock" class="recipe-btn-9">
             <div class="description">
-              <h3>Bbar Mojito</h3>
+              <h3>Flintlock</h3>
               <p>Traditional Cuban drink bartenders love to hate. Known as Hemingway's favorite along with a Daiquiri.</p>
               <div class="recipe-btn recipe-btn-9">Recipe</div>
               <table id="table-9">
@@ -392,25 +395,139 @@
                 </tr>
                 <tr>
                   <td>1.5oz</td>
-                  <td>Bbar house rum</td>
+                  <td>Bulleitt Bourbon</td>
                 </tr>
                 <tr>
-                  <td>2.5oz</td>
-                  <td>Mojito mix</td>
+                  <td>1oz</td>
+                  <td>Orange Juice</td>
                 </tr>
                 <tr>
-                  <td>3-4</td>
-                  <td>Mint leaves</td>
+                  <td>0.5oz</td>
+                  <td>Green Tea Syrup</td>
                 </tr>
                 <tr>
-                  <td>2-3</td>
-                  <td>Lime slices</td>
+                  <td>1</td>
+                  <td>Orange slice</td>
                 </tr>
                 <tr>
                   <th colspan="2">Preparation</th>
                 </tr>
                 <tr>
-                  <td colspan="2">Add lime slices and mint into Collins glass and muddle. Pour rum and mojito mix, add ice. Shake vigorously. Garnish with lime.</td>
+                  <td colspan="2">Build. Shake in large rocks glass. Garnish with orange slice.</td>
+                </tr>
+              </table>
+            </div>
+          </div> <!-- .info-card-content ends -->
+        </article> <!-- .info-card ends -->
+
+        <article class="info-card">
+          <div class="info-card-content">
+            <img src="img/specialty-cardinal-sin.jpg" alt="Berry Basil Daiquiri" class="recipe-btn-9">
+            <div class="description">
+              <h3>Berry Basil Daiquiri</h3>
+              <p>Traditional Cuban drink bartenders love to hate. Known as Hemingway's favorite along with a Daiquiri.</p>
+              <div class="recipe-btn recipe-btn-9">Recipe</div>
+              <table id="table-9">
+                <tr>
+                  <th colspan="2">Ingridients</th>
+                </tr>
+                <tr>
+                  <td>1.5oz</td>
+                  <td>Bbar Rum</td>
+                </tr>
+                <tr>
+                  <td>0.25oz</td>
+                  <td>Lemon Juice</td>
+                </tr>
+                <tr>
+                  <td>0.75oz</td>
+                  <td>Basil Syrup</td>
+                </tr>
+                <tr>
+                  <td>0.5oz</td>
+                  <td>Strawberry Puree</td>
+                </tr>
+                <tr>
+                  <th colspan="2">Preparation</th>
+                </tr>
+                <tr>
+                  <td colspan="2">Mix ingredients in a Collins glass. Shake very well. Garnish with lemon slice.</td>
+                </tr>
+              </table>
+            </div>
+          </div> <!-- .info-card-content ends -->
+        </article> <!-- .info-card ends -->
+
+        <article class="info-card">
+          <div class="info-card-content">
+            <img src="img/specialty-cardinal-sin.jpg" alt="East Village Sultan" class="recipe-btn-9">
+            <div class="description">
+              <h3>East Village Sultan</h3>
+              <p>Traditional Cuban drink bartenders love to hate. Known as Hemingway's favorite along with a Daiquiri.</p>
+              <div class="recipe-btn recipe-btn-9">Recipe</div>
+              <table id="table-9">
+                <tr>
+                  <th colspan="2">Ingridients</th>
+                </tr>
+                <tr>
+                  <td>1.5oz</td>
+                  <td>Bbar Gin</td>
+                </tr>
+                <tr>
+                  <td>0.5oz</td>
+                  <td>Lemon Juice</td>
+                </tr>
+                <tr>
+                  <td>0.25oz</td>
+                  <td>Lime Juice</td>
+                </tr>
+                <tr>
+                  <td>0.5oz</td>
+                  <td>Jasmine Syrup</td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>Mint sprigs</td>
+                </tr>
+                <tr>
+                  <th colspan="2">Preparation</th>
+                </tr>
+                <tr>
+                  <td colspan="2">Tear two mint leaves a couple times add in glass with rest of ingredients, shake and serve in Collins glass. Garnish with lime.</td>
+                </tr>
+              </table>
+            </div>
+          </div> <!-- .info-card-content ends -->
+        </article> <!-- .info-card ends -->
+
+        <article class="info-card">
+          <div class="info-card-content">
+            <img src="img/specialty-cardinal-sin.jpg" alt="Weekend Lover" class="recipe-btn-9">
+            <div class="description">
+              <h3>Weekend Lover</h3>
+              <p>Traditional Cuban drink bartenders love to hate. Known as Hemingway's favorite along with a Daiquiri.</p>
+              <div class="recipe-btn recipe-btn-9">Recipe</div>
+              <table id="table-9">
+                <tr>
+                  <th colspan="2">Ingridients</th>
+                </tr>
+                <tr>
+                  <td>1.5oz</td>
+                  <td>Bbar Gin</td>
+                </tr>
+                <tr>
+                  <td>0.5oz</td>
+                  <td>Lavender Syrup</td>
+                </tr>
+                <tr>
+                  <td>0.25oz</td>
+                  <td>Lemon Juice</td>
+                </tr>
+                <tr>
+                  <th colspan="2">Preparation</th>
+                </tr>
+                <tr>
+                  <td colspan="2">Build, shake, top with soda. Serve in Collins glass. Garnish with lime.</td>
                 </tr>
               </table>
             </div>
