--- a/wine.html
+++ b/wine.html
@@ -94,6 +94,103 @@
       <p>A wine blend is a wine made with a blend of several grape varieties. Blending is a traditional method of winemaking, and today there are several famous wine blends produced in classic winemaking regions. Just so you know, most wine blends are mixed together after the fermentation (and aging) is complete. When grapes are blended and fermented together it is called a field blend. A famous example of a field blend is Port wine.</p>
     </div>
 
+    <h3>BBAR'S SELECTION</h3>
+    <p><strong>What is ABV?</strong></br>ABV = Alcohol by volume (abbreviated as ABV, abv, or alc/vol) is a standard measure of how much alcohol (ethanol) is contained in a given volume of an alcoholic beverage (expressed as a volume percent). It is defined as the number of millilitres of pure ethanol present in 100 millilitres of solution at 20°C.</p>
+
+    <h2>White and Rosé</h2>
+    <div class="liqour">
+      <h4>Pine Ridge Chenin Blanc Viognier 2014</h4>
+      <p><img src="img/wine-chenin.jpg" alt="Chenin Blanc" class="brand-img-h-150"></p>
+      <p><strong>History:</strong> In the early 1990s, Pine Ridge crafted this unusual and delectable blend as an experimental bottling, creating one of our most beloved and popular wines. This unique marriage of two varietals that would never share the same bottle in their native France unites the crisp, honeyed fruit of Chenin Blanc with the plush body and juicy stone fruit notes of Viognier, for a wine that is both sophisticated and easy to enjoy.</p>
+      <p><strong>Tasting notes:</strong> The newest release of our intriguing blend delights the nose with a charming bouquet of enticing aromas of fresh Meyer lemon, fuzzy peach, ripe honeydew melon and yellow plum, mingled with touches of citrus blossom and white tea. The clean, vibrant palate enters with juicy pomelo, sweet lychee and honeyed tangerine fruits, balanced by vibrant acidity and hints of yellow apple and key lime pie that last through the crisp and refreshing finish.</p>
+      <p><strong>Origin:</strong> Pine Ridge, CA</p>
+      <p><strong>ABV:</strong> 12.5%</p>
+    </div>
+    <div class="liqour">
+      <h4>Duoble T Chardonnay 2014</h4>
+      <p><img src="img/wine-chard.jpg" alt="Chardonnay" class="brand-img-h-150"></p>
+      <p>Trefethen Family Vineyards produces a diverse range of award-winning varietal, blended and reserve wines – all from our Napa Valley estate – exhibiting the classic hallmarks of fine wine quality: richness with elegance, concentration with finesse, complexity with harmony, and sophistication with approachability. Reflecting both the relatively cool climate of our Oak Knoll District of Napa Valley estate vineyard and the Trefethen family’s preference for balanced wines, this classic style dovetails perfectly with the growing movement of connoisseurs in the United States away from wines of unbridled alcohol and ripeness toward wines of greater finesse and food-friendliness.</p>
+      <p><strong>Tasting notes:</strong> Flavors of citrus, peach & nectarine make this wine great for sipping. Bright fruit leads to notes of graham cracker & baking spices while enhancing the full-bodied mouthfeel. - Winery</p>
+      <p><strong>Origin:</strong> Napa, CA</p>
+      <p><strong>ABV:</strong> 14.1%</p>
+    </div>
+    <div class="liqour">
+      <h4>Complice de Loire pointe d’Agrumes Sauvignon Blanc 2014</h4>
+      <p><img src="img/wine-sauvblanc.jpg" alt="Sauvignon Blanc" class="brand-img-h-150"></p>
+      <p><strong>Tasting notes:</strong> Limpid, white flower and citrus flavors dominate this bottle. The ample and sour mouth, provide a good length for an immediate pleasure. It can be appreciated as an aperitif and with shellfish, fish and cheeses.</p>
+      <p><strong>Origin:</strong> Loire Valley, France</p>
+      <p><strong>ABV:</strong> 12.5%</p>
+    </div>
+    <div class="liqour">
+      <h4>Pinot Grigio delle Venezie 2014</h4>
+      <p><img src="img/wine-grigio.jpg" alt="Pinot Grigio" class="brand-img-h-150"></p>
+      <p>This wine is a perfect introduction to the variety. Delicately scented and soft on the palate, it offers classic citrus and floral notes in a balanced elegant style.</p>
+      <p><strong>Tasting notes:</strong> Lemon-green in color, aromas of Key limes and white peaches complement undertones of green apples and grains of paradise. On the palate, it is smooth and refreshing with a long, pleasant finish.</p>
+      <p><strong>Origin:</strong> Venato, Italy </p>
+      <p><strong>ABV:</strong> 12.8%</p>
+    </div>
+    <div class="liqour">
+      <h4>Gueissard VDP Mediterranee Petit Gueissard 2015 aka our Rose</h4>
+      <p><img src="img/wine-rose.jpg" alt="Rosé" class="brand-img-h-150"></p>
+      <p><strong>Grape type:</strong> Mourvèdre (30%), Sytrah (30%), Cinsault (10%), Grenache (30%), Cabernet-Sauvignon (5%)</p>
+      <p><strong>Tasting notes:</strong> A salmon colour with nuances of dark pink. Red fruit aromas such as raspberry, wild strawberry, and some notes og litichi. Fresh, rich and long-lasting in the mouth.</p>
+      <p><strong>Origin:</strong> Provence, France</p>
+      <p><strong>ABV:</strong> 12.5%</p>
+    </div>
+
+    <h2>Red</h2>
+    <div class="liqour">
+      <h4>Tilia Malbec 2014</h4>
+      <p><img src="img/wine-malbec.png" alt="Malbec" class="brand-img"></p>
+      <p>The Tilia wines are made at Bodegas Esmeralda in the Eastern region of Mendoza. They are made by Leopoldo Kuschnaroff, a winemaker and viticulturist in charge of all Catena family vineyards in Eastern Mendoza. This Malbec exemplifies the true varietal character of Malbec from Mendoza. The grapes are sourced from vineyard sites in the Eastern and Southern regions of Mendoza ranging in elevation from 2,600 to 4,300 feet above sea level.</p>
+      <p><strong>Tasting notes:</strong> Aromas of black cherries and plums are accompanied by notes of violets and vanilla. On the palate the wine is rich and full-bodied with flavors of juicy blackberries, cranberries, and black currants abound, followed by notes of vanilla and sweet spice.</p>
+      <p><strong>Origin:</strong> Mendoza, Argentina</p>
+      <p><strong>ABV:</strong> 13%</p>
+    </div>
+    <div class="liqour">
+      <h4>Gravelly Ford Pinot Noir 2014</h4>
+      <p><img src="img/wine-noir.jpg" alt="PINOT NOIR" class="brand-img"></p>
+      <p><strong>Tasting notes:</strong> Medium-light garnet in color, Gravelly Ford Pinot Noir offers intense aromas of raspberry and cherry, accented by a touch of vanilla and sweet spice. The bright, fruit-forward palate displays soft, silky tannins, well balanced acidity with a touch of violet on the finish.</p>
+      <p><strong>Origin:</strong> Parlier, California</p>
+      <p><strong>ABV:</strong> 12%</p>
+    </div>
+    <div class="liqour">
+      <h4>Ravenswood Cabernet Sauvignon 2012</h4>
+      <p><img src="img/wines-cab-sauv.jpg" alt="cab sauv" class="brand-img"> 
+      <p>Cabernet Sauvignon today is the most planted red varietal in the world. Identified as a descendent of Cabernet Franc and Sauvignon Blanc, the late-ripening Cabernet Sauvignon needs to be planted in warmer climates to fully ripen.</p>
+      <p><strong>Tasting notes:</strong> As real as Cab gets, with muscular tannins and juicy fruit aromas backed by gold blackberry, black currant, toasted oak and vanilla flavors.</p>
+      <p><strong>Origin:</strong> Sonoma County, CA</p>
+      <p><strong>ABV:</strong> 13.5%</p>
+      </div>
+    <div class="liqour">
+      <h4>Hullabaloo Lodi Zinfandel 2012</h4>
+      <p><img src="img/wines-zin.jpg" alt="zinfandel" class="brand-img">
+      <p>High in natural alcohol and tannin, grown carefully it can be rich and complex, with dark fruit berry fruit and peppery spice.</p>
+      <p><strong>Tasting notes:</strong> This wine plays tricks on the palate, tasting much lighter in body than its alcohol suggests. Layered with red fruit along with a lift of herb, it is structured and composed, with a long, lingering finish.</p>
+      <p><strong>Origin:</strong> Central Valley/Lodi, CA</p>
+      <p><strong>ABV:</strong> 15.3%</p>
+    </div>
+
+    <h2>Sparkling</h2>
+    <div class="liqour">
+      <h4>Corte Giona Extra Dry Prosecco</h4>
+      <p><img src="img/wine-prosecco.png" alt="Sauvignon Blanc" class="brand-img"></p>
+      <p>A delicate straw yellow in the glass with persistent bubbles. Plentiful citrus and orchard fruit aromas rise from the glass and on the palate it is dry, fruity, and mineral. A zippy acidity leads into the finish which is fruit-forward and exquisitely dry. </br>Grape type: 95% Glera, 5% Pinot Grigio</p>
+      <p><strong>Tasting notes:</strong> Typical fruity, pleasantly dry. Perfect as an aperitif with light starters or seafood.</p>
+      <p><strong>Origin:</strong> Veneto, Italy</p>
+      <p><strong>ABV:</strong> 11%</p>
+    </div>
+    <div class="liqour">
+      <h4>Juve y Camps Brut Rosé NV</h4>
+      <p><img src="img/wine-sp-rose.jpg" alt="Sauvignon Blanc" class="brand-img"></p>
+      <p>This Rosé Brut is made from 100% Pinot Noir grapes that come from the newly acquired Feixa 1 vineyard on the historic Juvé y Camps estate. The free run juice undergoes a cold-soak maceration followed by fermentation in stainless steel. The resulting wine blends the traditional methods of Juvé y Camps with international flair and flavor.</p>
+      <p><strong>Tasting notes:</strong> This Cava is beautiful, salmon-pink in color. On the nose, the delicate aromas evolve from notes of fresh red apple and strawberries to hints of honey white flowers and toasted almond. On the palate the texture is rich and creamy with a fine perlage.</p>
+      <p><strong>Origin:</strong> Cataluna, Spain</p>
+      <p><strong>ABV:</strong> 12%</p>
+    </div>
+
+
+<!-- 
     <h3>Taxonomy</h3>
     <p><img src="img/bbar-mark.svg" alt="bbar mark" id="bbar-mark"> = BBar and Grill carries this wine.</p>
     <div class="liqour">
@@ -140,7 +237,7 @@
             <p><strong>Alcohol Content (%):</strong> 14.2</p>
             </div></p>
         </div> <!-- .liqour-level-2  -->
-
+<!-- 
         <div class="liqour-level-2">
           <h4>Black Cherry / Raspberry</h4>
           <p><strong>Spicy</strong></p>
@@ -158,9 +255,8 @@
           </p>
           <p><strong>Round</strong></p>
           <p>Merlot</br>Amarone</br>Valpolicella</br>Chateauneuf du Pape</p>
-        </div> <!-- .liqour-level-2  -->
-
-        <div class="liqour-level-2">
+        </div> <!-- .liqour-level-2 -->
+    <!--     <div class="liqour-level-2">
           <h4>Blueberry / Blackberry</h4>
           <p><strong>Spicy</strong></p>
           <p>Shiraz</br>Monastrelli</p>
@@ -176,16 +272,16 @@
             <p><strong>Alcohol Content (%):</strong> 13.5</p>
             </div>
           </p>
-        </div> <!-- .liqour-level-2  -->
+        </div> .liqour-level-2 
+ -->
+    <!--   </div> <!-- .liqour-level-1 -->
 
-      </div> <!-- .liqour-level-1 -->
-
-      <div class="liqour-level-1">
+    <!--   <div class="liqour-level-1">
 
         <h4>Sweet Red</h4>
         <p>Some Bulk Wines</br>Reciotto della Valpolicella</br>Occhio di Pernice</p>
       </div> <!-- .liqour-level-1 -->
-
+<!-- 
       <div class="liqour-level-1">
 
         <h4>Savory Red</h4>
@@ -197,7 +293,7 @@
           <p><strong>Round</strong></p>
           <p>Gigondas</br>Brunello di Montalcino</br>Carignan</br>Vacqueyras</p>
         </div> <!-- .liqour-level-2 -->
-
+<!-- 
         <div class="liqour-level-2">
           <h4>Truffle Forest</h4>
           <p><strong>Spicy/juicy</strong></p>
@@ -205,15 +301,15 @@
           <p><strong>Round</strong></p>
           <p>Bourgogne</br>Dolcetto</br>Cote Chalonnaise</p>
         </div> <!-- .liqour-level-2 -->
-
+<!-- 
         <div class="liqour-level-2">
           <h4>Smoke Tobacco Leather</h4>
           <p><strong>High Tannin</strong></p>
           <p>Rioja</br>Cahors</br>Taurasi</br>Aglianico</p>
           <p><strong>Round</strong></p>
           <p>Rioja Reserva & Gran Reserva</br>Cornas</br>Pessac-Leognan</br>Graves</br>Ribera del Duero</br>Cannonau</p>
-        </div> <!-- .liqour-level-2 -->
-
+        </div> <!-- .liqour-level-2 --> 
+<!-- 
         <div class="liqour-level-2">
           <h4>Black Pepper Gravel</h4>
           <p><strong>High Tannin</strong></p>
@@ -223,9 +319,9 @@
           <p><strong>Round</strong></p>
           <p>Pomerol</br>Rhone</br>St. Joseph</br>Fronsac</br>Cote de Castillon</br>Bandol</br>Hermitage</br>St. Emillon</p>
         </div> <!-- .liqour-level-2  -->
-
+<!-- 
       </div> <!-- .liqour-level-1 -->
-    </div> <!-- .liqour -->
+    </div> <!-- .liqour --> 
 
     <h3>Graphic Taxonomy</h3>
     <p>If you are more of a graphic type of person, below is a treat for your.</p>
